Fix Footer button offset on Mobile

--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -155,7 +155,12 @@
     .footerColumnContainerBottom {
         gap : 20px;
     }
+
     .footerButtonContainer {
+        right : 10px;
+    }
+
+    .footerButton {
         right : 10px;
     }
 }
